sumo/tests/sumo/output/e3/errors/pos_false__exit/errors.sumo
Error: Attribute 'pos' in definition of det_exit '4/1to3/1' is not a real number.
Quitting (on error).
